# storytell

./: .gitignore  404.html  Cargo.toml  README.md  index.html  intro.html  print.html  searchindex.js  searchindex.json
.github/workflows/: book.yml
Language/: choices.html  index.html  labels.html  paths.html
Language/State/: conditions.html  data.html  index.html  variables.html
book/: book.toml
book/src/: SUMMARY.md  intro.md
book/src/Language/: choices.md  index.md  labels.md  paths.md
crates/app/: package-lock.json  package.json
crates/app/frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/compiler/src/base/: files.rs  mod.rs
crates/compiler/src/compiler/: compile.rs  compiler.rs  mod.rs  project.rs
crates/compiler/src/files/: file.rs  file_host.rs  mod.rs
crates/compiler/src/js_compiler/: compile.rs  inline_js.rs  magic_vars_collector.rs  mod.rs  rebuilder.rs  visitors.rs
crates/compiler/src/json_compiler/: compile.rs  mod.rs
crates/compiler/src/path/: mod.rs
crates/compiler/src/visitors/: flatten_access.rs  magic_vars_collector.rs  mod.rs  rebuilder.rs
crates/compiler/src/visitors/magic_vars/: magic_var.rs  mod.rs
crates/compiler/src/visitors/variable_collector/: mod.rs  variable.rs
crates/diagnostics/: Cargo.toml
crates/files/: Cargo.toml
crates/js_parser/: Cargo.toml
crates/parser/: Cargo.toml
docs/: 404.html  index.html  intro.html  print.html  searchindex.js  searchindex.json
frontend/: package.json
frontend/src/: main.tsx
(+104 files in other folders)
