[package]
name = "storytell_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storytell_diagnostics = { path = "../diagnostics" }
storytell_parser = { path = "../parser" }
storytell_js_parser = { path = "../js_parser" }